build: set qa language level to Java 8
The tests in QA are being used by both the testcontainer tests as the embedded tests. Since the testcontainer tests will be run JDK8 the tests written should be compatible with Java 8.